# bgs-asset-studio

./: .clang-format  CMakeLists.txt  CMakePresets.json  PCH.h  README.md  cpp.hint  format.sh  register-src.sh  vcpkg.json
.github/workflows/: c-cpp.yml
assets/presets/: bethesda.json  skyrim-se - Copy.json  skyrim-se.json
cli/: CMakeLists.txt
cli/cmake/: headerlist.cmake  sourcelist.cmake
cli/src/: arg_actions.cpp  arg_actions.h  main.cpp
gui/: CMakeLists.txt
gui/cmake/: sourcelist.cmake
gui/src/: WinMain.cpp  win_main.cpp
lib/: CMakeLists.txt  PCH.h
lib/cmake/: headerlist.cmake  sourcelist.cmake
lib/include/: BGSAssetStudioLIB.h  asset.h  asset_registry.h  bgs_asset_studio.h
lib/src/: BGSAssetStudioLIB.cpp  asset.cpp  asset.h  asset_builder.cpp  asset_builder.h  asset_registry_impl.cpp  asset_registry_impl.h  asset_worker.cpp  asset_worker.h  bgs_asset_studio.cpp  hr_exception.cpp  hr_exception.h  texture_asset.cpp  texture_asset.h
